--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,12 +86,12 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
+/*.benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -99,7 +99,7 @@ p {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
-}
+}*/
 
 .benefit-lead h3 {
     margin-bottom: 10px;
@@ -161,7 +161,7 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing img {
     max-height: 200px;
 }
 
