--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* GLOBAL CSS DEFAULTS */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -86,6 +87,8 @@ p {
     background-color: #2589bd;
 }
 
+/* Consolidating benefit items */
+
 .benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
@@ -101,6 +104,8 @@ p {
     color: #ffffff;
 }*/
 
+/* Consolidating benefit h3 text */
+
 .benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -115,6 +120,8 @@ p {
     margin-bottom: 10px;
     text-align: center;
 }*/
+
+/* consolidating benefit image behavior */
 
 .benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
@@ -133,6 +140,8 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }*/
+
+/* Consolidating Search Engine styles */
 
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
@@ -161,6 +170,8 @@ p {
     color: #ffffff;
 }*/
 
+/* Consolidating search engine image specs */
+
 .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
@@ -172,6 +183,8 @@ p {
 .social-media-marketing img {
     max-height: 200px;
 }*/
+
+/* Consolidating Search Engine h2 settings */
 
 .search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
@@ -187,6 +200,9 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }*/
+
+
+/* Footer details */
 
 .footer {
     padding: 30px;
